fix(search-input): make tags auto height so they can grow on mobile

--- a/src/styles/pages/_visitor-space.scss
+++ b/src/styles/pages/_visitor-space.scss
@@ -92,5 +92,10 @@
 		&--has-dropdown {
 			height: 100%;
 		}
+
+		.c-tag,
+		.c-tag--closable {
+			height: auto;
+		}
 	}
 }
